Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-50517

It is not possible to disable audit rotation based on size

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.1.0
    • 4.0.0, 4.1.0, 4.1.1, 4.1.2, 4.5.0, 4.5.1, 4.6.0, 4.6.1, 4.6.4, 4.6.2, 4.6.3, 4.6.5, 5.0.0, 5.0.1, 5.1.0, 5.1.1, 5.1.2, 5.1.3, 5.5.0, 5.5.1, 5.5.2, 5.5.3, 5.5.4, 5.5.5, 5.5.6, 5.5.5-MP2, 6.0.0, 6.0.1, 6.0.2, 6.0.3, 6.0.4, 6.0.5, 6.5.1, 6.6.0, 6.6.1, 6.6.2, 6.5.2, 6.5.0, 6.6.3, 7.0.0-Beta1, 7.0.0, 7.0.1, 7.0.2
    • memcached
    • None
    • Triaged
    • 1
    • Unknown
    • KV 2022-Jan

    Description

      According to the documentation ( https://docs.couchbase.com/server/current/cli/cbcli/couchbase-cli-setting-audit.html ):

      --audit-log-rotate-size <bytes>
       
      Specifies the audit log rotate size. This is the size at which the current audit log will be
      replaced with a new empty audit log file. The log file is rotated to ensure that the audit log
      does not consume too much disk space. The minimum audit log rotate size is 0 bytes and
      maximum is 524,288,000 (500MiB). When it is set to 0 the log will not be rotated based on
      size.
      

      Setting the rotate size to 0 will cause the file to rate for every new event

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            trond Trond Norbye
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty