MB-50517: Setting 0 as rotate size should disable size rotation

According to the documentation it setting size rotation size
to 0 should disable file size rotation for the audit log:

   --audit-log-rotate-size <bytes>

    Specifies the audit log rotate size. This is the size at
    which the current audit log will be replaced with a new
    empty audit log file. The log file is rotated to ensure
    that the audit log does not consume too much disk space.
    The minimum audit log rotate size is 0 bytes and maximum is
    524,288,000 (500MiB). When it is set to 0 the log will not
    be rotated based on size.

Change-Id: I06b3fb40cace1bf8a137520872b74e7c38aed8da
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/169204
Reviewed-by: Daniel Owen <owend@couchbase.com>
Tested-by: Trond Norbye <trond.norbye@couchbase.com>